Initial work on container and navbar

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgxStarter</title>
+  <title>NGX Starter</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+
+    <div class="site-loading-container">
+      <div class="site-loading-message">
+        <img src="/assets/images/site-loading.png">
+        <div class="message">
+          Loading...
+        </div>
+      </div>
+    </div>
+
+  </app-root>
 </body>
 </html>
