added non-html5 browser support for sectioning elements

--- a/src/index.html
+++ b/src/index.html
@@ -60,5 +60,23 @@
 		</div>
 
 	</app-root>
+
+	<!--[if lt IE 9]>
+		<script>
+			document.createElement("article");
+			document.createElement("aside");
+			document.createElement("footer");
+			document.createElement("header");
+			document.createElement("nav");
+			document.createElement("section");
+			document.createElement("time");
+		</script>
+	<![endif]-->
+	<noscript>
+		<p><strong>This web page requires JavaScript to be enabled.</strong></p>
+		<p>JavaScript is an object-oriented computer programming language
+		  commonly used to create interactive effects within web browsers.</p>
+		<p><a href="https://goo.gl/koeeaJ">How to enable JavaScript?</a></p>
+	</noscript>
 </body>
 </html>
