more code smells

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 		}
 
 		.site-loading-container .site-loading-message .message {
-			font-family: Roboto, arial;
+			font-family: Roboto, arial, serif;
 			font-size: 24px;
 			margin: 10px;
 		}
@@ -52,7 +52,7 @@
 
 		<div class="site-loading-container">
 			<div class="site-loading-message">
-				<img src="/assets/images/site-loading.png">
+				<img src="/assets/images/site-loading.png" alt="Site loading image">
 				<div class="message">
 					Loading...
 				</div>
