style: Prettier formatting for html
Applies prettier formatting to html files and sets up commit hook to autoformat before commit.

--- a/src/index.html
+++ b/src/index.html
@@ -1,82 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>NGX Starter</title>
-	<base href="/">
+	<head>
+		<meta charset="utf-8" />
+		<title>NGX Starter</title>
+		<base href="/" />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-	<style>
-		body {
-			padding: 0;
-			margin: 0;
-			min-height: 100%;
-		}
+		<style>
+			body {
+				padding: 0;
+				margin: 0;
+				min-height: 100%;
+			}
 
-		html {
-			min-height: 100%;
-		}
+			html {
+				min-height: 100%;
+			}
 
-		.site-loading-container {
-			background-color: #f4f7fc;
-			text-align: center;
+			.site-loading-container {
+				background-color: #f4f7fc;
+				text-align: center;
 
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			top: 0;
-		}
+				position: fixed;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				top: 0;
+			}
 
-		.site-loading-container .site-loading-message {
-			min-height: 100%;
-			text-align: center;
+			.site-loading-container .site-loading-message {
+				min-height: 100%;
+				text-align: center;
 
-			position: fixed;
-			left: 0;
-			right: 0;
-			top: 30%;
-		}
+				position: fixed;
+				left: 0;
+				right: 0;
+				top: 30%;
+			}
 
-		.site-loading-container .site-loading-message .message {
-			font-family: Roboto, arial, serif;
-			font-size: 24px;
-			margin: 10px;
-		}
-	</style>
-</head>
-<body>
-	<app-root>
-
-		<div class="site-loading-container">
-			<div class="site-loading-message">
-				<img src="/assets/images/site-loading.png" alt="Site loading image">
-				<div class="message">
-					Loading...
+			.site-loading-container .site-loading-message .message {
+				font-family: Roboto, arial, serif;
+				font-size: 24px;
+				margin: 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<app-root>
+			<div class="site-loading-container">
+				<div class="site-loading-message">
+					<img src="/assets/images/site-loading.png" alt="Site loading image" />
+					<div class="message">
+						Loading...
+					</div>
 				</div>
 			</div>
-		</div>
+		</app-root>
 
-	</app-root>
-
-	<!--[if lt IE 9]>
-		<script>
-			document.createElement("article");
-			document.createElement("aside");
-			document.createElement("footer");
-			document.createElement("header");
-			document.createElement("nav");
-			document.createElement("section");
-			document.createElement("time");
-		</script>
-	<![endif]-->
-	<noscript>
-		<p><strong>This web page requires JavaScript to be enabled.</strong></p>
-		<p>JavaScript is an object-oriented computer programming language
-		  commonly used to create interactive effects within web browsers.</p>
-		<p><a href="https://goo.gl/koeeaJ">How to enable JavaScript?</a></p>
-	</noscript>
-</body>
+		<!--[if lt IE 9]>
+			<script>
+				document.createElement('article');
+				document.createElement('aside');
+				document.createElement('footer');
+				document.createElement('header');
+				document.createElement('nav');
+				document.createElement('section');
+				document.createElement('time');
+			</script>
+		<![endif]-->
+		<noscript>
+			<p><strong>This web page requires JavaScript to be enabled.</strong></p>
+			<p>
+				JavaScript is an object-oriented computer programming language commonly used to
+				create interactive effects within web browsers.
+			</p>
+			<p><a href="https://goo.gl/koeeaJ">How to enable JavaScript?</a></p>
+		</noscript>
+	</body>
 </html>
