--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- eslint-disable @angular-eslint/template/prefer-ngsrc -->
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -51,7 +52,12 @@
 		<app-root>
 			<div class="site-loading-container">
 				<div class="site-loading-message">
-					<img src="/assets/images/site-loading.png" alt="Site loading image" />
+					<img
+						src="/assets/images/site-loading.png"
+						alt="Site loading image"
+						height="250"
+						width="250"
+					/>
 					<div class="message">Loading...</div>
 				</div>
 			</div>
@@ -78,3 +84,4 @@
 		</noscript>
 	</body>
 </html>
+<!-- eslint-enable @angular-eslint/template/prefer-ngsrc -->
