feat: update to Angular 18

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 			<div class="site-loading-container">
 				<div class="site-loading-message">
 					<img
-						src="/assets/images/site-loading.png"
+						src="/images/site-loading.png"
 						height="250"
 						width="250"
 						alt="Site loading image"
